Rename file names for adapting Github pages
Rename temporarely file names for adapting Github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+
 theme: jekyll-theme-minimal
