--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -13,7 +13,9 @@ jobs:
 
     - name: Install hugo extended and httrack via chocolatey
       working-directory: .
-      run: choco install hugo-extended httrack
+      run: |
+           choco install hugo-extended --version 0.57.2
+           choco install httrack
 
     - name: Retrieve data from server
       working-directory: .
