switch to live directory

--- a/.github/workflows/onTag_deploy.yml
+++ b/.github/workflows/onTag_deploy.yml
@@ -43,7 +43,7 @@ jobs:
           ssh_private_key: ${{ secrets.USERMANUAL_KEY }}
           delete_remote_files: true
           local_path: './public/*'
-          remote_path: '/tmp/um/'
+          remote_path: '/var/www/npp-user-manual.org/public_html/'
 
     - name: check
       working-directory: .
@@ -52,4 +52,4 @@ jobs:
         chmod 600 ../private_key.pem
         ls -latr ./public
         ls -latr ..
-        ssh -o StrictHostKeyChecking=no -p ${{ secrets.USERMANUAL_PORT }} -i ../private_key.pem ${{ secrets.USERMANUAL_USERNAME }}@${{ secrets.USERMANUAL_HOST }} ls -latr /tmp/um/
+        ssh -o StrictHostKeyChecking=no -p ${{ secrets.USERMANUAL_PORT }} -i ../private_key.pem ${{ secrets.USERMANUAL_USERNAME }}@${{ secrets.USERMANUAL_HOST }} ls -latr /var/www/npp-user-manual.org/public_html/
