--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -1,6 +1,6 @@
-name: CI_build
+name: Build Static HTML For Verification
 
-on: [push, pull_request]
+on: [pull_request, workflow_dispatch]
 
 jobs:
   build:
