--- a/.github/workflows/CD_publish.yml
+++ b/.github/workflows/CD_publish.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 📡 Get Hugo-Extended v0.57.2
-      uses: peaceiris/actions-hugo@v2.6.0
+      uses: peaceiris/actions-hugo@c57490a8b04136ae58ab5866a93d3db2f0fa0945
       with:
         hugo-version: '0.57.2'
         extended: true
