--- a/.github/workflows/CD_publish.yml
+++ b/.github/workflows/CD_publish.yml
@@ -23,7 +23,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 📡 Get Hugo-Extended v0.57.2
-      uses: peaceiris/actions-hugo@c57490a8b04136ae58ab5866a93d3db2f0fa0945
+      #uses: peaceiris/actions-hugo@v2  # @v2 and @v2.6.0 giving node16-vs-node20 error in GitHub Actions
+      uses: ricomariani/actions-hugo@16ab92f9dbb1f28bb75268a4a5eede16cdc2a6e2
       with:
         hugo-version: '0.57.2'
         extended: true
