httrack didn't work with newer repo; start dumping directory listings, etc

--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -44,3 +44,32 @@ jobs:
           name: nppUserManual
           path: ./httrack_output/nppUserManual/
 
+
+    - name: 🔨 Build static HTML for site -- Pure Hugo
+      working-directory: .
+      run: |
+           hugo.exe --theme hugo-book-9
+           dir
+    #       $env:Path += ";C:\Program Files\WinHTTrack\"
+    #       httrack.exe "http://127.0.0.1:1313/" -O "./httrack_output"
+    #       Set-Location -Path httrack_output
+    #       Rename-Item -Path 127.0.0.1_1313 -NewName nppUserManual
+    #       Get-ChildItem -Recurse "./nppUserManual" -Filter index.html | Foreach-Object {
+    #           $orgname = $_.FullName
+    #           $tmpname = "$($orgname).unedited"
+    #           echo $tmpname
+    #           Copy-Item $orgname $tmpname
+    #           get-content $tmpname |
+    #                %{$_ -replace 'id="book-search-input" maxlength="64" readonly','id="book-search-input" maxlength="64" readonly hidden'} |
+    #                %{$_ -replace 'href="http://localhost:1313/"','href="./index.html"'} |
+    #                %{$_ -replace 'href="http://localhost:1313/','href="'} |
+    #                set-content $orgname
+    #           Remove-Item $tmpname
+    #       }
+
+    #- name: 🎉 Store zipfile as artifact
+    #  uses: actions/upload-artifact@v4
+    #  with:
+    #      name: nppUserManual
+    #      path: ./httrack_output/nppUserManual/
+
