--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -22,22 +22,22 @@ jobs:
       run: |
            hugo.exe -d static_html --theme hugo-book-9
            dir static_html
-    #       $env:Path += ";C:\Program Files\WinHTTrack\"
-    #       httrack.exe "http://127.0.0.1:1313/" -O "./httrack_output"
-    #       Set-Location -Path httrack_output
-    #       Rename-Item -Path 127.0.0.1_1313 -NewName nppUserManual
-    #       Get-ChildItem -Recurse "./nppUserManual" -Filter index.html | Foreach-Object {
-    #           $orgname = $_.FullName
-    #           $tmpname = "$($orgname).unedited"
-    #           echo $tmpname
-    #           Copy-Item $orgname $tmpname
-    #           get-content $tmpname |
-    #                %{$_ -replace 'id="book-search-input" maxlength="64" readonly','id="book-search-input" maxlength="64" readonly hidden'} |
-    #                %{$_ -replace 'href="http://localhost:1313/"','href="./index.html"'} |
-    #                %{$_ -replace 'href="http://localhost:1313/','href="'} |
-    #                set-content $orgname
-    #           Remove-Item $tmpname
-    #       }
+           Get-ChildItem -Recurse "./static_html" -Filter index.html | Foreach-Object {
+               $orgname = $_.FullName
+               $tmpname = "$($orgname).unedited"
+               echo $tmpname
+               Copy-Item $orgname $tmpname
+               get-content $tmpname |
+                    %{$_ -replace 'id="book-search-input"','id="book-search-input" readonly hidden'} |
+                    %{$_ -replace 'href="http://localhost:1313/"','href="./index.html"'} |
+                    %{$_ -replace 'href="http://localhost:1313/','href="'} |
+                    %{$_ -replace 'integrity="','attr_integ_ignore="'} |
+                    %{$_ -replace 'href="/','href="./'} |
+                    set-content $orgname
+               Remove-Item $tmpname
+           }
+
+# <input type="text" id="book-search-input" placeholder="Search" aria-label="Search" maxlength="64" data-hotkeys="s/" />
 
     - name: 🎉 Store zipfile as artifact -- Pure Hugo
       uses: actions/upload-artifact@v4
