--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -11,33 +11,61 @@ jobs:
     - name: 🚚 Checkout repo
       uses: actions/checkout@v4
 
-    - name: 📡 Install hugo extended and httrack via chocolatey
+    - name: 📡 Install hugo-extended via chocolatey
       working-directory: .
       run: |
            choco install hugo-extended --version 0.68.3
-           #choco install httrack
 
     - name: 🔨 Build static HTML for site -- Pure Hugo
       working-directory: .
       run: |
-           hugo.exe -d static_html --theme hugo-book-9
-           dir static_html
-           Get-ChildItem -Recurse "./static_html" -Filter index.html | Foreach-Object {
+           hugo.exe -d static_html --theme hugo-book-9 --baseURL "http://localhost:1313"
+
+            # first do the changes that go in all the HTML files
+            Get-ChildItem -Recurse "./static_html" -Filter index.html | Foreach-Object {
                $orgname = $_.FullName
                $tmpname = "$($orgname).unedited"
-               echo $tmpname
                Copy-Item $orgname $tmpname
                get-content $tmpname |
                     %{$_ -replace 'id="book-search-input"','id="book-search-input" readonly hidden'} |
-                    %{$_ -replace 'href="http://localhost:1313/"','href="./index.html"'} |
-                    %{$_ -replace 'href="http://localhost:1313/','href="'} |
                     %{$_ -replace 'integrity="','attr_integ_ignore="'} |
-                    %{$_ -replace 'href="/','href="./'} |
                     set-content $orgname
                Remove-Item $tmpname
-           }
+            }
 
-# <input type="text" id="book-search-input" placeholder="Search" aria-label="Search" maxlength="64" data-hotkeys="s/" />
+            # need different replacements at different depths
+            Copy-Item "./static_html/index.html" "./static_html/index.html.source"
+            get-content "./static_html/index.html.source" |
+                    %{$_ -replace '(href|content|src)="/','$1="./'} |
+                    %{$_ -replace '(href|content|src)="http://localhost:1313/','$1="./'} |
+                    %{$_ -replace '((?:href|content|src)="\./[^"]*?)/"','$1/index.html"'} |
+                    set-content "./static_html/index.html"
+            Remove-Item "./static_html/index.html.source"
+
+            # need to delay the docs-level index, but save the existing copy, so that I can easily recurse
+            #   to the deep directories, and then do the docs-level
+            Copy-Item "./static_html/docs/index.html" "./static_html/docs/index.html.source"
+
+            # recurse to the deepest level
+            Get-ChildItem -Recurse "./static_html/docs" -Filter index.html | Foreach-Object {
+               $orgname = $_.FullName
+               $tmpname = "$($orgname).unedited"
+               Copy-Item $orgname $tmpname
+               get-content $tmpname |
+                    %{$_ -replace '(href|content|src)="/','$1="../../'} |
+                    %{$_ -replace '(href|content|src)="http://localhost:1313/','$1="../../'} |
+                    %{$_ -replace '((?:href|content|src)="\.[^"]*?)/"','$1/index.html"'} |
+                    set-content $orgname
+               Remove-Item $tmpname
+            }
+
+            # now do the docs-level
+            get-content "./static_html/docs/index.html.source" |
+                    %{$_ -replace '(href|content|src)="/','$1="../'} |
+                    %{$_ -replace '(href|content|src)="http://localhost:1313/','$1="../'} |
+                    %{$_ -replace '((?:href|content|src)="\.[^"]*?)/"','$1/index.html"'} |
+                    set-content "./static_html/docs/index.html"
+            Remove-Item "./static_html/docs/index.html.source"
 
     - name: 🎉 Store zipfile as artifact -- Pure Hugo
       uses: actions/upload-artifact@v4
