--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
            choco install hugo-extended --version 0.68.3
 
-    - name: 🔨 Build static HTML for site -- Pure Hugo
+    - name: 🔨 Build static HTML for site
       working-directory: .
       run: |
            hugo.exe -d static_html --theme hugo-book-9 --baseURL "http://localhost:1313"
@@ -67,39 +67,8 @@ jobs:
                     set-content "./static_html/docs/index.html"
             Remove-Item "./static_html/docs/index.html.source"
 
-    - name: 🎉 Store zipfile as artifact -- Pure Hugo
+    - name: 🎉 Store zipfile as artifact
       uses: actions/upload-artifact@v4
       with:
           name: nppUserManual_pureHugo
           path: ./static_html/
-
-
-
-####    - name: 🔨 Build static HTML for site
-####      working-directory: .
-####      run: |
-####           cmd /c start hugo.exe server --theme hugo-book-9
-####           $env:Path += ";C:\Program Files\WinHTTrack\"
-####           httrack.exe "http://127.0.0.1:1313/" -O "./httrack_output"
-####           Set-Location -Path httrack_output
-####           Rename-Item -Path 127.0.0.1_1313 -NewName nppUserManual
-####           Get-ChildItem -Recurse "./nppUserManual" -Filter index.html | Foreach-Object {
-####               $orgname = $_.FullName
-####               $tmpname = "$($orgname).unedited"
-####               echo $tmpname
-####               Copy-Item $orgname $tmpname
-####               get-content $tmpname |
-####                    %{$_ -replace 'id="book-search-input" maxlength="64" readonly','id="book-search-input" maxlength="64" readonly hidden'} |
-####                    %{$_ -replace 'href="http://localhost:1313/"','href="./index.html"'} |
-####                    %{$_ -replace 'href="http://localhost:1313/','href="'} |
-####                    set-content $orgname
-####               Remove-Item $tmpname
-####           }
-####
-####    - name: 🎉 Store zipfile as artifact
-####      uses: actions/upload-artifact@v4
-####      with:
-####          name: nppUserManual
-####          path: ./httrack_output/nppUserManual/
-
-
